--- a/Maze.csproj
+++ b/Maze.csproj
@@ -6,16 +6,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Protobuf Include="AmazeingEvening.proto" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Google.Protobuf" Version="3.8.0" />
-    <PackageReference Include="Grpc.Core" Version="1.21.0" />
-    <PackageReference Include="Grpc.Tools" Version="1.21.0">
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
 </Project>
